--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "doc": "docs"
   },
   "dependencies": {
-    "flexboxgrid": "^6.3.1"
+    "-": "0.0.1",
+    "flexboxgrid": "^6.3.1",
+    "g": "^2.0.1",
+    "muleify": "^5.4.0"
   },
   "devDependencies": {},
   "scripts": {
