--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/arcdevio/flatironsrecovery.com/issues"
   },
-  "homepage": "https://github.com/arcdevio/flatironsrecovery.com#readme"
+  "homepage": "https://github.com/arcdevio/flatironsrecovery.com#readme",
+  "dependencies": {
+    "erbium": "^2.0.1"
+  }
 }
